@@ -1,3 +1,8 @@
+2005-05-17  Philippe Gerum  <rpm@xenomai.org>
+
+	* include/nucleus/types.h: Do not include <linux/config.h> in
+	simulation context.
+
 2005-05-16  Alexis Berlemont  <alexis.berlemont@free.fr>
 
 	* skins/rtai/task.c (rt_task_create): Properly set the suspension
